# cuCollections

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  design.md
benchmarks/: CMakeLists.txt  benchmark_defaults.hpp  benchmark_utils.hpp  defaults.hpp  distinct_count_estimator_bench.cu  distribution.hpp  hash_bench.cu  key_generator.hpp  synchronization.hpp  util.hpp  utils.hpp
benchmarks/analysis/data/: static-multimap-data.csv
benchmarks/analysis/notebooks/: StaticMultimap.ipynb  Utils.py  bloom_filter_bench.ipynb  rbk_bench.ipynb
benchmarks/bloom_filter/: add_bench.cu  bloom_filter_bench.cu  contains_bench.cu  defaults.hpp  utils.hpp
benchmarks/distinct_count_estimator/: distinct_count_estimator_bench.cu
benchmarks/dynamic_map/: contains_bench.cu  erase_bench.cu  insert_bench.cu
benchmarks/hash_function/: hash_function_bench.cu
benchmarks/hash_table/: dynamic_h2h_bench.cu  dynamic_map_bench.cu  hash_table_bench.cu  head_to_head_bench.cu  legacy_static_map_bench.cu  profile.cu  slab_hash_bench.cu  slabhash_max_lf.cu  static_h2h_bench.cu  static_map_bench.cu  static_multimap_bench.cu  static_reduction_map_bench.cu  static_reduction_map_param_grid_search.cu  static_reduction_map_smem_bench.cu
benchmarks/hash_table/cudf/: allocator.cuh  concurrent_unordered_map.cuh
benchmarks/hash_table/cudf_chain/: chain_kernels.cuh  concurrent_unordered_map_chain.cuh  warp_insert.cuh
benchmarks/hash_table/cudf_include/: helper_functions.cuh
benchmarks/hash_table/dynamic_map/: find_bench.cu  (+3 more)
benchmarks/hyperloglog/: hyperloglog_bench.cu
benchmarks/priority_queue/: priority_queue_bench.cu
benchmarks/reduce_by_key/: cub_reduce_by_key_bench.cu  cuco_reduce_by_key_bench.cu  reduce_by_key.cu  thrust_reduce_by_key_bench.cu
benchmarks/static_map/: find_bench.cu  insert_bench.cu  insert_or_apply_bench.cu
benchmarks/static_multimap/: count_bench.cu  insert_bench.cu  query_bench.cu  retrieve_bench.cu
benchmarks/static_multiset/: contains_bench.cu  count_bench.cu  find_bench.cu  insert_bench.cu  retrieve_bench.cu
benchmarks/static_set/: contains_bench.cu  find_bench.cu  insert_bench.cu  rehash_bench.cu  retrieve_all_bench.cu  size_bench.cu
benchmarks/synchronization/: synchronization.cpp  synchronization.hpp
benchmarks/test/: test_benchmark.cpp
benchmarks/trie/: insert_bench.cu  lookup_bench.cu
examples/: CMakeLists.txt  static_reduction_map.cu
examples/bloom_filter/: arrow_bf_host_bulk_example.cu  bloom_filter_example.cu  host_bulk_example.cu  l2_residency_example.cu
examples/distinct_count_estimator/: device_ref_example.cu  host_bulk_example.cu
examples/hyperloglog/: device_ref_example.cu  host_bulk_example.cu
examples/map/: insert_find.cu
examples/other/: identity_test.cu
examples/static_map/: count_by_key_example.cu  custom_type.cu  custom_type_example.cu  device_ref_example.cu  device_side_example.cu  device_view_example.cu  host_bulk_example.cu  static_map_example.cu  static_multi_map_example.cu
examples/static_multimap/: find.cu  host_bulk_example.cu  static_multimap_example.cu
examples/static_multiset/: host_bulk_example.cu
examples/static_reduction_map/: shared_memory_example.cu  static_reduction_map_example.cu  static_reduction_map_smem_example.cu
examples/static_set/: device_ref_example.cu  device_reference_example.cu  device_subsets_example.cu  host_bulk_example.cu  host_bulk_perfect_example.cu  mapping_table_example.cu  shared_memory_example.cu
examples/trie/: device_ref_example.cu  host_bulk_example.cu
tests/: CMakeLists.txt  catch_main.cpp  test_utils.cuh  test_utils.hpp  trie_utils.hpp  util.hpp  utils.cuh  utils.hpp
tests/bit_vector/: bit_vector_test.cu  find_next_set_test.cu  get_test.cu  rank_test.cu  select_test.cu  set_test.cu  size_test.cu
tests/bloom_filter/: bloom_filter_test.cu  unique_sequence_test.cu
tests/distinct_count_estimator/: device_ref_test.cu  spark_parity_test.cu  unique_sequence_test.cu
tests/dynamic_bitset/: find_next_set_test.cu  find_next_test.cu  get_test.cu  rank_test.cu  select_test.cu  size_test.cu
tests/dynamic_map/: dynamic_map_test.cu  erase_test.cu  erase_test_experimental.cu  unique_sequence_test.cu  unique_sequence_test_experimental.cu  unique_sequence_test_modern.cu
tests/example/: example.cpp  example.cu
tests/hash_map/: map_test.cu  multimap_test.cu
tests/hyperloglog/: device_ref_test.cu  spark_parity_test.cu  unique_sequence_test.cu
tests/insert_only_hash_array/: insert_only_hash_array_test.cu
tests/legacy_static_map/: legacy_static_map_test.cu
tests/priority_queue/: priority_queue_test.cu
tests/static_map/: capacity_test.cu  custom_type_test.cu  duplicate_keys_test.cu  erase_test.cu  for_each_test.cu  hash_test.cu  heterogeneous_lookup_test.cu  insert_and_find_test.cu  insert_or_apply_test.cu  insert_or_assign_test.cu  key_sentinel_test.cu  pair_function_test.cu  rehash_test.cu  shared_memory_test.cu  size_test.cu  static_map_test.cu  stream_test.cu  unique_sequence_test.cu
tests/static_multimap/: count_test.cu  custom_pair_retrieve_test.cu  custom_type_test.cu  for_each_test.cu  heterogeneous_lookup_test.cu  insert_contains_test.cu  insert_if_test.cu  insert_test.cu  multiplicity_test.cu  non_match_test.cu  pair_function_test.cu  pair_if_test.cu  static_multimap_test.cu
tests/static_multiset/: contains_test.cu  count_test.cu  custom_count_test.cu  find_test.cu  for_each_test.cu  insert_test.cu  large_input_test.cu  retrieve_test.cu
tests/static_reduction_map/: reduction_functors_test.cu  static_reduction_map_test.cu
tests/static_set/: capacity_test.cu  heterogeneous_lookup_test.cu  insert_and_find_test.cu  large_input_test.cu  rehash_test.cu  retrieve_all_test.cu  retrieve_test.cu  shared_memory_test.cu  size_test.cu  unique_sequence_test.cu
tests/trie/: common.hpp  lookup_test.cu  perf_test.cu  trie_utils.hpp  utils.hpp
tests/utility/: extent_test.cu  fast_int_test.cu  hash_test.cu  helper_test.cu  inf_sup_test.cu  prime_test.cu  probing_scheme_test.cu  storage_test.cu
(+326 files in other folders)
